[package]
name = "lookup-table-registry-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync"] }
thiserror = "1"
endorphin = "0.1"

solana-client = "1.14"
solana-sdk = "1.14"
anchor-lang = "0.27.0"

[dependencies.solana-address-lookup-table-program-gateway]
path = "../solana-address-lookup-table-program-gateway"
features = ["stub-id", "stub-instruction", "stub-state"]

[dependencies.lookup-table-registry]
path = "../../programs/lookup-table-registry"
default-features = false
features = ["cpi"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
