[package]
name = "solana-address-lookup-table-program-gateway"
version = "0.1.0"
edition = "2021"

[features]
full = ["solana-address-lookup-table-program"]
stub-id = ["solana-program"]
stub-instruction = ["stub-id", "serde"]
stub-state = ["stub-id", "serde", "bincode", "solana-frozen-abi-macro", "bytemuck"]
stub-all = ["stub-id", "stub-instruction", "stub-state"]
default = []

[dependencies]
solana-address-lookup-table-program = { version = "1.14", optional = true }

# for stubbing
solana-program = { version = "1.14", optional = true }
serde = { version = "1.0.138", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }
solana-frozen-abi-macro = { version = "1.14", optional = true }
bytemuck = { version = "1.12.3", optional = true }

[dev-dependencies]
solana-address-lookup-table-program = "1.14"
solana-program = "1.14"
serde = { version = "1.0.138", features = ["derive"] }
bincode = "1.3.3"
solana-frozen-abi-macro = "1.14"
bytemuck = "1.12.3"
