[package]
name = "lookup-table-registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lookup_table_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["solana-address-lookup-table-program"]

[dependencies]
anchor-lang = "0.26.0"
solana-program = "1.14"
solana-address-lookup-table-program = { version = "1.14", optional = true }
